--- a/pages/index.html
+++ b/pages/index.html
@@ -3,4 +3,46 @@
 permalink: /
 ---
 
-<h1>HEY there!</h1>
+<h1>Stijlgids Arte del Sueño</h1>
+
+<h2>Waarom een huisstijl?</h2>
+
+<p>
+	Arte del Sueño is een bloeiende vzw die bekend staat om zijn hoogstaande musicalproducties. <br>
+	Zowel op scène als daarnaast wordt koste nog moeite gespaard om van elke productie een totaalspektakel te maken.
+	Een vernieuwde look en feel moet dit mee in de verf zetten.
+</p>
+<p>
+	Om de vzw over de producties heen een identiteit te geven, omschrijft deze stijlgids naast een logo ook een volledig nieuwe huisstijl.
+	De huisstijl bewerkstelligt de herkenbaarheid en sympathieke uitstraling die we met de vzw uitdragen. Het maakt deel uit van het sterke verhaal dat we brengen.
+	<br>Door de stijl toe te passen op alle communicatiekanalen zorgen we voor een eenduidige presentatie die de geloofwaardigheid van de vzw versterkt.
+	Dit geldt zowel voor toepassingen in intern gebruik als voor toepassingen waarmee we naar buiten treden. 
+	
+</p>
+
+
+<h2>Onderzoek</h2>
+    
+<p>De kernactiviteit van Arte del Sueño is en blijft het brengen van musicalproducties.
+	Inherent aan deze activiteit is het frequent wijzigen van affiches en promo-materiaal.
+	Er wordt vaak gebruik gemaakt van bestaande logopacks, waarbij een aantal stijlregels vastliggen.</p>
+<p>
+	Voor Arte del Sueño werd er dus gezocht naar een look die zou passen op elke nieuwe affichestijl die we presenteren.
+	Op onze communicatie is de titel van de productie ook meestal de belangrijkste boodschap die we naar buiten willen brengen.<br>
+	Het was daarom belangrijk dat de eigen stijl, die de vzw ent op de bestaande affiche, niet overheerste.
+	<br><em>Low-profile, maar toch sterk en herkenbaar aanwezig.</em>
+</p>
+<h2>Een nieuwe look</h2>
+
+<p>
+	De nieuwe huisstijl kreeg een frisse nieuwe look mee.
+	Een beperkt kleurenpalet en krachtige typografie geven structuur.
+	Zware contrasten in combinatie met een zorgvuldig geselecteerd letterbeeld, zorgen voor de typografische herkenbaarheid van Arte del Sueño.
+</p>
+<p>
+	Het logo heeft 2 gezichten: in de eigen huisstijl gedraagt het zich aanvullend en bouwt het mee aan de look en feel waarbij de typografie de toon zet.
+	Op een andere dan de eigen stijl, zo denken we maar aan een affiche van een musicalproductie, is het logo in staat om in te mengen zonder van zijn herkenbaarheid te verliezen.
+	<br>
+	<br>
+	In deze stijlgids wordt in detail ingegaan op alle elementen en hoe ze gebruikt worden.
+</p>
