--- a/pages/kleur/index.html
+++ b/pages/kleur/index.html
@@ -2,33 +2,91 @@
 # layout: vertical
 permalink: kleur/
 published: true
-title: Kleur intro
+title: Kleurgebruik
 ---
 
-<h1>Over kleur</h1>
+<h1>Een eigen kleur</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et quod est munus, quod opus sapientiae? Utinam quidem dicerent alium alio beatiorem! Iam ruinas videres. Duo Reges: constructio interrete. Sint modo partes vitae beatae. </p>
+<h2>Welke kleuren?</h2>
 
-<p><i>Que Manilium, ab iisque M.</i> Audio equidem philosophi vocem, Epicure, sed quid tibi dicendum sit oblitus es. Itaque quantum adiit periculum! ad honestatem enim illum omnem conatum suum referebat, non ad voluptatem. Moriatur, inquit. Semovenda est igitur voluptas, non solum ut recta sequamini, sed etiam ut loqui deceat frugaliter. Graecum enim hunc versum nostis omnes-: Suavis laborum est praeteritorum memoria. <b>Quamquam te quidem video minime esse deterritum.</b> Quae diligentissime contra Aristonem dicuntur a Chryippo. <a href="http://loripsum.net/" target="_blank">Nunc vides, quid faciat.</a> Habes, inquam, Cato, formam eorum, de quibus loquor, philosophorum. </p>
+	<p>De huisstijl van Arte del Sueño bevat 4 geheel eigen kleuren.
+		<br>De verschillende kleuren werden zorgvuldig geselecteerd en op elkaar afgestemd, ze vormen een gelijkbenige driehoek binnen de kleurencirkel.<br>
+		Deze contrastrerende combinatie versterkt de unieke look van de huisstijl. Er wordt gewerkt met gedurfde kleuren, die de mogelijkheid biedt om zware contrasten te creëren.
+		Dit past binnen het doel van deze huisstijl, nl. een logo dat past op verschillende andere stijlen maar sterk staat op zijn eigen huisstijl.
+	</p>
 
-<p>Idcirco enim non desideraret, quia, quod dolore caret, id in voluptate est. Est tamen ea secundum naturam multoque nos ad se expetendam magis hortatur quam superiora omnia. Quicquid porro animo cernimus, id omne oritur a sensibus; Idcirco enim non desideraret, quia, quod dolore caret, id in voluptate est. Mihi quidem Antiochum, quem audis, satis belle videris attendere. Nam ista vestra: Si gravis, brevis; Sapientem locupletat ipsa natura, cuius divitias Epicurus parabiles esse docuit. <mark>Quonam, inquit, modo?</mark> </p>
+	<div class="nested contentbox">      
+                
+		<div class="kleurvak rood">
+				<b>RGB:</b> R235 G0 B69<br>
+				<b>CMYK:</b> C0 M100 Y60 K0<br>
+				<b>LaB:</b> L59 a75 b30<br>
+				<b>HEX:</b> #E50F45<br><br>
+				<b>Pantone+ Solid Coated 192C</b>
 
-<ul>
-	<li>Itaque eo, quale sit, breviter, ut tempus postulat, constituto accedam ad omnia tua, Torquate, nisi memoria forte defecerit.</li>
-	<li>Expressa vero in iis aetatibus, quae iam confirmatae sunt.</li>
-	<li>In quibus doctissimi illi veteres inesse quiddam caeleste et divinum putaverunt.</li>
-	<li>Sed emolumenta communia esse dicuntur, recte autem facta et peccata non habentur communia.</li>
-</ul>
+		</div>
+		<div class="kleurvak blauw">
+				<b>RGB:</b> R242 G196 B0<br>
+				<b>CMYK:</b> C5 M20 Y95 K0<br>
+				<b>LaB:</b> L82 a6 b82<br>
+				<b>HEX:</b> #F2C400<br><br>
+				<b>Pantone+ Solid Coated 7463C</b>
+
+		</div>
+		<div class="kleurvak grad_rood">
+				<p class=""> 25% | 50% | 75% | 100%</p>
+		</div>
+		<div class="kleurvak grad_geel grijs">
+				<p class=""> 25% | 50% | 75% | 100%</p>
+		</div>
+		<div class="kleurvak geel">
+				<b>RGB:</b> R19 G44 B69<br>
+				<b>CMYK:</b> C100 M80 Y45 K45<br>
+				<b>LaB:</b> L17 a-4 b-19<br>
+				<b>HEX:</b> #112C45<br><br>
+				<b>Pantone+ Solid Coated 7406C</b>
+
+		</div>
+	
+		
+
+		<div class="kleurvak grijs">
+				<b>RGB:</b> R215 G215 B215<br>
+				<b>CMYK:</b> C18 M13 Y15 K0<br>
+				<b>LaB:</b> L40 a0 b85<br>
+				<b>HEX:</b> #D9D8D6<br><br>
+				<b>Pantone+ Solid Coated Cool Grey 1</b>
+		</div>
+
+		
+		<div class="kleurvak grad_blauw">
+				<p class=""> 25% | 50% | 75% | 100%</p>
+		</div>
+	
+		<div class="kleurvak grad_grijs grijs">
+				<p class=""> 25% | 50% | 75% | 100%</p>
 
 
-<p><i>Ne in odium veniam, si amicum destitero tueri.</i> At, illa, ut vobis placet, partem quandam tuetur, reliquam deserit. Nihil enim iam habes, quod ad corpus referas; Sed quid sentiat, non videtis. Quis non odit sordidos, vanos, leves, futtiles? <a href="http://loripsum.net/" target="_blank">Huius, Lyco, oratione locuples, rebus ipsis ielunior.</a> Falli igitur possumus. </p>
+		</div>
 
-<p><b>Deprehensus omnem poenam contemnet.</b> <b>Negat enim summo bono afferre incrementum diem.</b> Illa argumenta propria videamus, cur omnia sint paria peccata. Apparet statim, quae sint officia, quae actiones. <a href="http://loripsum.net/" target="_blank">Sed haec omittamus;</a> Atqui iste locus est, Piso, tibi etiam atque etiam confirmandus, inquam; Non enim solum Torquatus dixit quid sentiret, sed etiam cur. Vadem te ad mortem tyranno dabis pro amico, ut Pythagoreus ille Siculo fecit tyranno? </p>
-
-<blockquote cite="http://loripsum.net">
-	He who wishes to become a master of color must see, feel, and experience each individual color in its endless combinations with all other colors. (Johannes Itten)
-</blockquote>
+		<a href="../deliverables/"> <button>Download Adobe Swatches</button></a>
+	</div>
 
 
-<p>Claudii libidini, qui tum erat summo ne imperio, dederetur. Quid enim de amicitia statueris utilitatis causa expetenda vides. Cur id non ita fit? Philosophi autem in suis lectulis plerumque moriuntur. Non enim solum Torquatus dixit quid sentiret, sed etiam cur. <i>Et ille ridens: Video, inquit, quid agas;</i> Non modo carum sibi quemque, verum etiam vehementer carum esse? Tum mihi Piso: Quid ergo? </p>
+<p>Alle kleuren zijn beschikbaar als spotcolor (Pantone) en zijn zowel reproduceerbaar in CMYK als in RGB.
+Er zijn ook 4 gradaties in de kleuren mogelijk, nl. 100%, 75%, 50% en 25%.
 
+</p>
+
+
+<p>De kleuren worden op een specifieke manier gebruikt. 
+De voorkeur gaat naar de combinatie van 2 van de hoofdkleuren, aanvullend kan gebruik gemaakt worden van Pantone+ Solid Coated Cool Grey 1.
+Afbeeldingen worden dan omgezet in duo-tone. 
+<br>Bij het gebruik van afbeeldingen in kleur (geen duo-tone) wordt er één hoofdkleur gebruikt doorheen de volledige publicatie.
+
+</p>
+
+<p>Enkel rood (Pantone+ Solid Coated 192C) en blauw (Pantone+ Solid Coated 7406C) kunnen worden gebruikt als hoofdkleur bij full-color afbeeldingen.
+	Geel (Pantone+ Solid Coated 7463C) wordt nooit als enige hoofdkleur gebruikt, het wordt telkens in combinatie met rood of blauw gebruikt.
+
+</p>
