--- a/pages/deliverables/index.html
+++ b/pages/deliverables/index.html
@@ -30,7 +30,7 @@ title: Deliverables
 
 <h3>Print media</h3>
 <ul class="deliverables">
-    <li><a href="/1718-3CMO-BaP-HannOtte/assets/bronbestanden/Print/briefhoofd.dotx">Briefpapier</a></li>
+    <li><a href="/1718-3CMO-BaP-HannOtte/assets/bronbestanden/Print/briefhoofd.dotx">Briefpapier ___</a></li>
     <li><a href="1718-3CMO-BaP-HannOtte/assets/bronbestanden/Print/vergaderverslag.dotx">Vergaderverslag</a></li>
     <li><a href="/assets/bronbestanden/Print/factuur.xlsx">Factuur</a></li>
     <li><a href="/assets/bronbestanden/Print/brochure.zip">Brochure</a></li>
