--- a/pages/logo/logo_gebruik.html
+++ b/pages/logo/logo_gebruik.html
@@ -5,7 +5,7 @@ published: true
 title: Logo gebruik
 ---
 
-<h1> Het logo, regienota's ___</h1>
+<h1> Het logo, regienota's</h1>
 
 <h2>Copyright </h2>
 
