--- a/pages/typo/index.html
+++ b/pages/typo/index.html
@@ -11,8 +11,8 @@ title: Typografie
     Dit lettertype wordt gebruikt in het logo. Het tweede lettertype is Zilla Slab, uit de Google fonts catalogus.</p>
 
     <div class="row">
-            <div class="col-6 marginbottom "><img src="/images/avantgarde.jpg" class="img-fluid "></div>
-            <div class="col-6 marginbottom "><img src="/images/zilla.jpg" class="img-fluid "></div>
+            <div class="col-6 marginbottom "><img src="/1718-3CMO-BaP-HannOtte/images/avantgarde.jpg" class="img-fluid "></div>
+            <div class="col-6 marginbottom "><img src="/1718-3CMO-BaP-HannOtte/images/zilla.jpg" class="img-fluid "></div>
            
         </div>
 
@@ -54,5 +54,5 @@ title: Typografie
         Er werd gezocht naar een hedendaags-ogend en uiterst leesbaar lettertype dat aansluit bij de rest van de huisstijl.
         Zilla Slab voldoet aan deze eisen. Voor publicaties op A4-formaat of kleiner, wordt een corpsgrootte van 10pt en regelafstand van 10pt gebruikt.
         De volledige broodtekst wordt uitgelijnd op het baselinegrid, dat wordt ingesteld op 10pt.
-        In de sjabloonbestanden <a href="/deliverables/index.html">'vergaderverslag' en 'briefpapier' </a> zijn deze instellingen voorgedefinieerd.
+        In de sjabloonbestanden <a href="/1718-3CMO-BaP-HannOtte/deliverables/index.html">'vergaderverslag' en 'briefpapier' </a> zijn deze instellingen voorgedefinieerd.
      </p>
